--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -25,3 +25,9 @@ body {
   background: image_url('ep_naturalblack.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #801FDE;
+  font-family: 'metropolisbold', serif;
+  font-size:30px;
+}
