--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,6 +10,15 @@
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top: 10px;
   padding: 20px;
+  display: inline-block;
+
+  input {
+    margin-left: 10px;
+  }
+
+  textarea {
+    margin-left: 10px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,7 +32,7 @@ body {
 }
 
 .navbar {
-  background: image_url('ep_naturalblack.png');
+  background: image_url('crissXcross.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
@@ -32,3 +41,46 @@ body {
   font-family: 'metropolisbold', serif;
   font-size:30px;
 }
+
+.error {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
+
+.turbo-button {
+  background-color: #6610f2 !important;
+}
+
+.turbo-icon {
+  background-color: white;
+}
+
+.apple_pagination {
+  background: #f1f1f1;
+  border: 1px solid #e5e5e5;
+  text-align: center;
+  padding: 1em;
+  cursor: default; }
+  .apple_pagination a, .apple_pagination span {
+    padding: 0.2em 0.3em; }
+  .apple_pagination .disabled {
+    color: #aaaaaa; }
+  .apple_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    background-color: #bebebe;
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    line-height: 1.5;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+  .apple_pagination a {
+    text-decoration: none;
+    color: black; }
+    .apple_pagination a:hover, .apple_pagination a:focus {
+      text-decoration: underline; }
