Fixed the API and Map Issue with MT

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -50,11 +50,11 @@ body {
 }
 
 .turbo-button {
-  background-color: #6610f2 !important;
+  background-color: #801FDE !important;
 }
 
 .turbo-icon {
-  background-color: white;
+  background-color: black;
 }
 
 .pagination a, .pagination span.current, .pagination span.gap {
