--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -78,14 +78,16 @@
 
 <h1>Comments</h1>
 
-<% @place.comments.each do |comment| %>
-  <div class="col-12 col-sm-6">
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-      <% end %>
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>>
-    </blockquote>>
-  </div>>
-<% end %>
+<div class="row">
+  <% @place.comments.each do |comment| %>
+    <div class="col-12 col-sm-6">
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>>
+      </blockquote>>
+    </div>>
+  <% end %>
+</div>S
