--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -125,9 +125,13 @@ blockquote p {
   display: inline;
 }
 
-blockquote2 {
+.upld-photo {
+
+}
+
+.photo-caption {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+}
