--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,19 +1,17 @@
 <h1><%= @places.inspect %></h1>
 
-<%= will_paginate @places %>
-
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
     <h1><%= link_to place.name, place_path(place) %>&nbsp;</h1><br />
     <i><%= place.address %></i><br /><br />
-    <p><%= place.description %></p><br />
+    <p><%= place.description %></p>
 
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
 
     <% if place.comments.present? %>
-      <div class="col-12">
+      <div class="col-12 col-sm-6">
         <blockquote>
           <% if place.comments.last.humanized_rating.present? %>
             <b><%= place.comments.last.humanized_rating %></b> -
@@ -23,5 +21,20 @@
         </blockquote>
       </div>
     <% end %>
+
+    <% if place.photos.present? %>
+      <div class="col-12">
+        <blockquote>
+          <% if place.photos.last.present? %>
+            <b><%= image_tag 'place.photos.last.picture' %></b> -
+          <% end %>
+          <%= place.photos.last %>
+          <small><%= place.photos.last.user.email %></small>   
+        </blockquote>
+      </div>
+    <% end %>  
   </div>
 <% end %>
+
+
+<%= will_paginate @places %>
