--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -102,14 +102,6 @@
   </div>
 </div>
 
-<div class="col-12 col-sm-8">
-  <% @place.photos.each do |photo| %>
-      <% if photo.picture.present? %>
-          <%= image_tag photo.picture.url %>
-      <% end %>
-  <% end %>
-</div>
-
 <h1>Comments</h1>
 
 <div class="row">
@@ -126,3 +118,17 @@
   <% end %>
 </div>
 
+<div class="col-12 col-sm-6">
+  <% @place.photos.each do |photo| %>
+      <% if photo.picture.present? %>
+        <div class="upld-photo">
+          <%= image_tag photo.picture.url %>
+        </div>
+        <div class="photo-caption">
+          <%= photo.caption %>
+        </div>
+      <% end %>
+  <% end %>
+</div>
+
+  
