--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -65,6 +65,8 @@ body {
     background-color: white;
     border: 1px solid #DDD;
     border-left-width: 0;
+    border-radius: 5px;
+    margin: 0 4px;
 }
 
 .pagination {
@@ -126,12 +128,24 @@ blockquote p {
 }
 
 .upld-photo {
-
+  .cmt-img {
+    max-width: 64%;
+  }
 }
 
 .photo-caption {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
+  margin: 10px 15px 10px 0px;
   padding: 0.5em 10px;
+}
+
+.indexphoto {
+  .idx-photo {
+    max-width: 30%;
+  }
+}
+
+.button-wrapper {
+  padding: 10px;
 }
