--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -24,12 +24,15 @@
 
     <% if place.photos.present? %>
       <div class="col-12">
-        <blockquote>
+        <div class="indexphoto">
           <% if place.photos.last.present? %>
-            <b><%= image_tag 'place.photos.last.picture' %></b> -
+            <b><%= image_tag place.photos.last.picture.url, class: 'idx-photo' %></b> -
           <% end %>
-          <%= place.photos.last %>
-          <small><%= place.photos.last.user.email %></small>   
+        </div>        
+        <blockquote>
+          <small>
+            <%= place.photos.last.caption %><br />
+            <%= place.photos.last.user.email %></small>   
         </blockquote>
       </div>
     <% end %>  
