Lesson 46: Making the Slider Look Good

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,6 +34,7 @@ body {
 .navbar {
   background: image_url('crissXcross.png');
   box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
@@ -57,7 +58,7 @@ body {
   background-color: black;
 }
 
-.pagination a, .pagination span.current, .pagination span.gap {
+.pagination a, .pagination span.current, .pagination span, .pagination em {
     float: left;
     padding: 0 14px;
     line-height: 38px;
@@ -140,12 +141,30 @@ blockquote p {
   padding: 0.5em 10px;
 }
 
-.indexphoto {
-  .idx-photo {
+.indexphoto > .idx-photo {
     max-width: 30%;
-  }
 }
 
 .button-wrapper {
   padding: 10px;
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  max-height: 550px;
+  width: 100%;
+}
+
+.carousel-caption {
+  font-family: 'metropolisbold', serif;
+  font-size:60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
