--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -141,10 +141,6 @@ blockquote p {
   padding: 0.5em 10px;
 }
 
-.indexphoto > .idx-photo {
-    max-width: 30%;
-}
-
 .button-wrapper {
   padding: 10px;
 }
@@ -167,4 +163,9 @@ blockquote p {
 
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.indexphoto > .idx-photo {
+    vertical-align: middle; 
+    max-width: 30%;
 }
