--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -146,7 +146,7 @@ blockquote p {
 }
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
-  max-height: 550px;
+  max-height: 850px;
   width: 100%;
 }
 
@@ -165,9 +165,11 @@ blockquote p {
   box-shadow: 0px 3px 8px #2a2a2a;
 }
 
-.indexphoto > .idx-photo {
+.indexphoto {
+    .idx-photo {
     vertical-align: middle; 
-    max-width: 30%;
+    max-width: 50%;
+  }
 }
 
 .user-photo {
